Fixed bug in form fields by removing z-index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -496,7 +496,6 @@ form select option {
   width: 60%;
   padding: 20px;
   margin: 12px 20%;
-  z-index: -2;
 }
 
 .container-form {
